--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,33 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.dashboard{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
+}
+.dashboard .left-section{
+  flex: 1;
+}
+.dashboard .right-section{
+  flex: 4;
+}
+.dashboard-actions{
+  padding: 0%
+  
+}
+.dashboard-actions li{
+  list-style: none;
+  padding: 2px 10px;
+  cursor: pointer;
+
 }
 
-.App-link {
-  color: #61dafb;
+.teer-relative-options{
+  display: flex;
+  justify-content: space-evenly
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.teer-mid{
+  width:400px
+}
+.teer-flex-row{
+  display: flex;
+  
 }
