--- a/src/fancy.css
+++ b/src/fancy.css
@@ -215,8 +215,8 @@ label
   background-color: #999;  
 }
 
-path { 
-  fill:   none;
+.svgContainer path { 
+  /* fill:   none; */
   stroke: #000;
   stroke-width: 0.5em;
 }
