--- a/src/theme/deep_blue.css
+++ b/src/theme/deep_blue.css
@@ -32,3 +32,7 @@
     background-color:var(--btn-primary-bg-color);
     color:white;
 }
+
+.register-item i{  
+    color:var(--btn-primary-bg-color);
+}
