--- a/src/pages/Pedegree/pedegree.css
+++ b/src/pages/Pedegree/pedegree.css
@@ -33,7 +33,8 @@
 }
 .ghost-element{
 
-     visibility: hidden;  
+     /* visibility: hidden;   */
+     background-color: palevioletred
 }
 
 .teer-female {
@@ -48,9 +49,8 @@
 
 .teer-user-details{
     position: absolute;
-    top: 2px;
-    background-color: rgb(226, 226, 226);
-    
+    top: 14px;
+    background-color: rgba(226, 226, 226,0.4);
     z-index: 10000;
     text-align: center;
 }
