Go the  pedegree chart to work

--- a/src/pages/Pedegree/pedegree.css
+++ b/src/pages/Pedegree/pedegree.css
@@ -54,3 +54,36 @@
     z-index: 10000;
     text-align: center;
 }
+.parent-box{
+    background-color: aqua
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
